<resources>
    <string name="app_name">My Application</string>
    <string name="username">Username</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="check_your_bank_activities">Check your bank activities</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_scan">ScanActivity</string>
    <string name="todo">TODO</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="barcode_amp_qr_code_scanner"><![CDATA[barcode & QR code scanner]]></string>
    <string name="camera">camera</string>
    <string name="gallery" />
    <string name="scan">scan</string>
    <string name="result">Result</string>
    <string name="result1">Result:</string>
    <string name="todo1">TODO</string>
    <string name="title_home" />
    <string name="setting">setting</string>
    <string name="ראשי" />
    <string name="הגדרות" />
    <string name="HomePage" />
    <string name="Setting" />
    <string name="scanner" />
    <string name="search" />
    <string name="main">ראשי</string>
    <string name="setting1">הגדרות</string>
    <string name="scan2">סרוק מוצר</string>
    <string name="welcome_to_ecocode">Welcome to EcoCode!</string>
    <string name="add1">הוספת מוצר</string>
    <string name="scan3">סריקת מוצר</string>
    <string name="gallry11">גלריה</string>
    <string name="גלריה">גלריה</string>
    <string name="מצלמה">מצלמה</string>
    <string name="סריקתמוצר">סריקת מוצר</string>
    <string name="חיפושמוצר">חיפוש מוצר</string>
    <string name="gmail">Gmail</string>
    <string name="sign_up">Sign Up</string>
    <string name="logout">logout</string>
    <string name="התנתקמהחשבון">התנתק מהחשבון</string>
    <string name="title_activity_log_in" />
    <string name="product_name">Product Name</string>
    <string name="close">Close</string>
    <string name="find_bin">Find Bin</string>
    <string name="סגור">סגור</string>
    <string name="פח">מצא פח</string>

    <string-array name="material_options">
        <item>קרטון</item>
        <item>אלומיניום</item>
        <item>ניילון</item>
        <item>פלסטיק</item>
        <item>זכוכית</item>
        <item>אחר</item>
    </string-array>



    <string-array name="category_options">
        <item>בקבוקים</item>
        <item>מוצרי חלב</item>
        <item>מוצרים יבשים</item>
        <item>קפואים</item>
        <item>מוצרי חשמל</item>
        <item>מוצרי ניקיון</item>
        <item>אחר</item>
    </string-array>
</resources>