<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ScanFunction">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/barcode_amp_qr_code_scanner"
             android:textSize="20sp"
             style="@style/TextAppearance.MaterialComponents.Headline6"
             android:textAlignment="center">

         </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            
            <com.google.android.material.button.MaterialButton
                android:id="@+id/cameraBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/camera"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/gallery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/gallery"
                tools:ignore="SpeakableTextPresentCheck" />

        </LinearLayout>

        <ImageView
            android:id="@+id/image"
            android:layout_width="369dp"
            android:layout_height="366dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/todo1"
            android:src="@drawable/baseline_adf_scanner_24" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/scan"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:text="@string/result1"/>

        <TextView
            android:id="@+id/zxing_possible_result_points"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>



    </LinearLayout>
    



</ScrollView>
