<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/baseline_add_home_24"
            android:title="@string/main"
            android:textColor="@color/white"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/navigation_setting"
            android:icon="@drawable/baseline_app_settings_alt_24"
            android:title="@string/setting1"
            android:textColor="@color/white"
            app:showAsAction="ifRoom" />
        <item
            android:id="@+id/navigation_scan"
            android:icon="@android:drawable/ic_menu_always_landscape_portrait"
            android:title="@string/scan2"
            android:textColor="@color/white"
            app:showAsAction="ifRoom" />

</menu>